[package]
name = "rustLibhks"
version = "0.1.1"
authors = ["Hitesh Kumar Sharma"]
description = "Sample library in rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hkshitesh/rustlibdemo"
repository = "https://github.com/hkshitesh/rustlibdemo"
edition = "2021"
readme = "README.md"

[dependencies]